k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients-api-service
  namespace: default
spec:
  selector:
    app: clients-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
