k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clients-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: clients.api.deltacapita.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clients-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - clients.api.deltacapita.com
      secretName: clients-api-cert
